Broken commit! Major Refactoring of the foaf-ssl-verifier package. This should make it easier to understand and to extend. Added the beginning of a caching systme. Will report message better so that a user interface can use it.

--- a/foafssl-verifier/pom.xml
+++ b/foafssl-verifier/pom.xml
@@ -90,7 +90,10 @@
 			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-queryparser-sparql</artifactId>
 		</dependency>
-
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-sail-nativerdf</artifactId>
+        </dependency>        
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
