The test pass now. Added new foafssl-keygen to place some classes that kept re-appearing. Fixed modules to work with refactoring.

--- a/foafssl-identity-provider/pom.xml
+++ b/foafssl-identity-provider/pom.xml
@@ -20,6 +20,11 @@
 	</licenses>
 
 	<dependencies>
+        <dependency>
+            <groupId>net.java.dev.sommer</groupId>
+            <artifactId>foafssl-keygen</artifactId>
+            <scope>test</scope>
+        </dependency>        
 		<dependency>
 			<groupId>net.java.dev.sommer</groupId>
 			<artifactId>foafssl-verifier</artifactId>
