removed unnecessary slf4j adaptors, updated slf4j version

--- a/foafssl-verifier/pom.xml
+++ b/foafssl-verifier/pom.xml
@@ -8,7 +8,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>foafssl-verifier</artifactId>
-    <packaging>jar</packaging>
+    <packaging>bundle</packaging>
     <name>FOAF+SSL :: Verifier</name>
     <url>http://sommer.dev.java.net/</url>
 
@@ -116,7 +116,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.4.3</version>
+            <version>1.6.0</version>
             <scope>test</scope>
             <exclusions>
                 <!--
@@ -129,23 +129,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jul-to-slf4j</artifactId>
-            <version>1.5.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.5.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.12</version>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.6.0</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 </project>
