--- a/foafssl-identity-provider/pom.xml
+++ b/foafssl-identity-provider/pom.xml
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.4.3</version>
+			<version>1.6.0</version>
 			<exclusions>
 				<!--
 					needed to avoid endless recursion, per:
@@ -60,23 +60,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>jul-to-slf4j</artifactId>
-			<version>1.5.2</version>
-			<scope>runtime</scope>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.6.0</version>
+			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.5.2</version>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.12</version>
-			<scope>runtime</scope>
-		</dependency>
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
