--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
 
 	<modules>
 		<module>foafssl-verifier</module>
+		<module>foafssl-verifier-sesame</module>
 		<module>foafssl-identity-provider</module>
 		<module>foafssl-identity-provider-webapp</module>
 		<module>foafssl-filter</module>
