--- a/foafssl-identity-provider/pom.xml
+++ b/foafssl-identity-provider/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -20,14 +21,19 @@
 	</licenses>
 
 	<dependencies>
-        <dependency>
-            <groupId>net.java.dev.sommer</groupId>
-            <artifactId>foafssl-keygen</artifactId>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>net.java.dev.sommer</groupId>
+			<artifactId>foafssl-keygen</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>net.java.dev.sommer</groupId>
 			<artifactId>foafssl-verifier</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.java.dev.sommer</groupId>
+			<artifactId>foafssl-verifier-sesame</artifactId>
+			<scope>test</scope>
 		</dependency>
         
 		<dependency>
@@ -45,23 +51,11 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.6.0</version>
-			<exclusions>
-				<!--
-					needed to avoid endless recursion, per:
-					http://www.slf4j.org/legacy.html
-				-->
-				<exclusion>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-jdk14</artifactId>
-				</exclusion>
-			</exclusions>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
-			<version>1.6.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
