--- a/pom.xml
+++ b/pom.xml
@@ -84,19 +84,24 @@
 		<module>foafssl-identity-provider</module>
 		<module>foafssl-identity-provider-webapp</module>
 		<module>foafssl-filter</module>
-        <module>foafssl-keygen</module>
-    </modules>
+		<module>foafssl-keygen</module>
+	</modules>
 
 	<dependencyManagement>
 		<dependencies>
-            <dependency>
-                <groupId>net.java.dev.sommer</groupId>
-                <artifactId>foafssl-keygen</artifactId>
-                <version>${foafssl.version}</version>
-            </dependency>
+			<dependency>
+				<groupId>net.java.dev.sommer</groupId>
+				<artifactId>foafssl-keygen</artifactId>
+				<version>${foafssl.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>net.java.dev.sommer</groupId>
 				<artifactId>foafssl-verifier</artifactId>
+				<version>${foafssl.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>net.java.dev.sommer</groupId>
+				<artifactId>foafssl-verifier-sesame</artifactId>
 				<version>${foafssl.version}</version>
 			</dependency>
 			<dependency>
@@ -299,6 +304,26 @@
 				<artifactId>sesame-runtime</artifactId>
 				<version>${sesame.version}</version>
 			</dependency>
+			<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.0</version>
+			<exclusions>
+				<!--
+					needed to avoid endless recursion, per:
+					http://www.slf4j.org/legacy.html
+				-->
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-jdk14</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.6.0</version>
+		</dependency>
 		</dependencies>
 	</dependencyManagement>
 
