fixed content negotiation header and upgraded to leatest rdfa parsers - though the sesame stuff is still not on maven central and needs to be compiled from shellac's github

--- a/foafssl-identity-provider-webapp/pom.xml
+++ b/foafssl-identity-provider-webapp/pom.xml
@@ -23,7 +23,7 @@
     <dependencies>
         <dependency>
             <groupId>net.java.dev.sommer</groupId>
-            <artifactId>foafssl-verifier</artifactId>
+            <artifactId>foafssl-verifier-sesame</artifactId>
         </dependency>
         <dependency>
             <groupId>net.java.dev.sommer</groupId>
