--- a/foafssl-verifier-sesame/pom.xml
+++ b/foafssl-verifier-sesame/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>net.java.dev.sommer</groupId>
 		<artifactId>foafssl</artifactId>
-		<version>0.5-SNAPSHOT</version>
+		<version>0.5</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>foafssl-verifier-sesame</artifactId>
