--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,15 @@
     <groupId>net.java.dev.sommer</groupId>
     <artifactId>foafssl</artifactId>
     <packaging>pom</packaging>
-    <version>0.5-SNAPSHOT</version>
+    <version>0.5</version>
     <name>FOAF+SSL</name>
     <url>http://sommer.dev.java.net/</url>
 
     <properties>
-        <foafssl.version>0.5-SNAPSHOT</foafssl.version>
+        <foafssl.version>0.5</foafssl.version>
         <sesame.version>2.3.1</sesame.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <licenses>
@@ -84,7 +86,7 @@
         <module>foafssl-identity-provider</module>
         <module>foafssl-identity-provider-webapp</module>
         <module>foafssl-filter</module>
-        <module>foafssl-keygen</module>
+        <!--module>foafssl-keygen</module--><!-- removed. Now moved to jsslutils -->
     </modules>
 
     <dependencyManagement>
