changes to make it compile with local keygen version

--- a/foafssl-identity-provider-webapp/pom.xml
+++ b/foafssl-identity-provider-webapp/pom.xml
@@ -12,6 +12,7 @@
     <packaging>war</packaging>
     <name>FOAF+SSL :: Identity Provider Sample Webapp</name>
     <url>http://sommer.dev.java.net/</url>
+	<version>${foafssl.version}</version>
 
     <licenses>
         <license>
