--- a/foafssl-filter/pom.xml
+++ b/foafssl-filter/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>net.java.dev.sommer</groupId>
 		<artifactId>foafssl</artifactId>
-		<version>0.5</version>
+		<version>${foafssl.version}</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<name>FOAF+SSL :: Servlet Filter</name>
@@ -11,6 +11,7 @@
 	<artifactId>foafssl-filter</artifactId>
 	<modelVersion>4.0.0</modelVersion>
 	<url>http://maven.apache.org</url>
+	<version>${foafssl.version}</version>
 
 	<licenses>
 		<license>
