--- a/foafssl-identity-provider/pom.xml
+++ b/foafssl-identity-provider/pom.xml
@@ -1,102 +1,102 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-	<groupId>net.java.dev.sommer</groupId>
-	<artifactId>foafssl</artifactId>
-	<version>0.5</version>
-	<relativePath>../pom.xml</relativePath>
-    </parent>
-    <artifactId>foafssl-identity-provider</artifactId>
-    <packaging>jar</packaging>
-    <name>FOAF+SSL :: Identity Provider Core Library</name>
-    <url>http://sommer.dev.java.net/</url>
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>net.java.dev.sommer</groupId>
+		<artifactId>foafssl</artifactId>
+		<version>0.5</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
+	<artifactId>foafssl-identity-provider</artifactId>
+	<packaging>jar</packaging>
+	<name>FOAF+SSL :: Identity Provider Core Library</name>
+	<url>http://sommer.dev.java.net/</url>
+	<version>${foafssl.version}</version>
 
-    <licenses>
-	<license>
-	    <name>BSD</name>
-	    <url>LICENCE.txt</url>
-	</license>
-    </licenses>
+	<licenses>
+		<license>
+			<name>BSD</name>
+			<url>LICENCE.txt</url>
+		</license>
+	</licenses>
 
-    <dependencies>
-	<dependency>
-	    <groupId>net.java.dev.sommer</groupId>
-	    <artifactId>keygenapp-base</artifactId>
-	    <version>${foafssl.version}</version>
-	    <scope>test</scope>
-	</dependency>
-	<dependency>
-	    <groupId>net.java.dev.sommer</groupId>
-	    <artifactId>foafssl-verifier</artifactId>
-	    <version>${foafssl.version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>net.java.dev.sommer</groupId>
-	    <artifactId>foafssl-verifier-sesame</artifactId>
-	    <scope>test</scope>
-	</dependency>
-        
-	<dependency>
-	    <groupId>org.bouncycastle</groupId>
-	    <artifactId>bcprov-jdk16</artifactId>
-	</dependency>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.clerezza</groupId>
+			<artifactId>ssl.keygen.base</artifactId>
+			<version>${foafssl.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.java.dev.sommer</groupId>
+			<artifactId>foafssl-verifier</artifactId>
+			<version>${foafssl.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.java.dev.sommer</groupId>
+			<artifactId>foafssl-verifier-sesame</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-	<dependency>
-	    <groupId>javax.servlet</groupId>
-	    <artifactId>servlet-api</artifactId>
-	    <version>2.5</version>
-	    <scope>provided</scope>
-	</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk16</artifactId>
+		</dependency>
 
-	<dependency>
-	    <groupId>org.slf4j</groupId>
-	    <artifactId>slf4j-api</artifactId>
-	    <scope>runtime</scope>
-	</dependency>
-	<dependency>
-	    <groupId>org.slf4j</groupId>
-	    <artifactId>slf4j-simple</artifactId>
-	    <scope>test</scope>
-	</dependency>
-	<dependency>
-	    <groupId>junit</groupId>
-	    <artifactId>junit</artifactId>
-	    <scope>test</scope>
-	</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
 
-	<dependency>
-	    <groupId>org.mortbay.jetty</groupId>
-	    <artifactId>jetty-servlet-tester</artifactId>
-	    <version>6.1.6</version>
-	    <scope>test</scope>
-	</dependency>
-	<dependency>
-	    <groupId>org.mortbay.jetty</groupId>
-	    <artifactId>jetty-naming</artifactId>
-	    <version>6.1.6</version>
-	    <scope>test</scope>
-	</dependency>
-	<dependency>
-	    <groupId>org.restlet</groupId>
-	    <artifactId>org.restlet</artifactId>
-	    <version>1.1.4</version>
-	    <scope>test</scope>
-	</dependency>
-	<dependency>
-	    <groupId>com.noelios.restlet</groupId>
-	    <artifactId>com.noelios.restlet</artifactId>
-	    <version>1.1.4</version>
-	    <scope>test</scope>
-	</dependency>
-	<dependency>
-	    <groupId>org.jsslutils</groupId>
-	    <artifactId>jsslutils-test-certificates</artifactId>
-	    <version>1.0.2</version>
-	    <scope>test</scope>
-	</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty-servlet-tester</artifactId>
+			<version>6.1.6</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty-naming</artifactId>
+			<version>6.1.6</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.restlet</groupId>
+			<artifactId>org.restlet</artifactId>
+			<version>1.1.4</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.noelios.restlet</groupId>
+			<artifactId>com.noelios.restlet</artifactId>
+			<version>1.1.4</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jsslutils</groupId>
+			<artifactId>jsslutils-test-certificates</artifactId>
+			<version>1.0.2</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
 
 
