--- a/foafssl-verifier/pom.xml
+++ b/foafssl-verifier/pom.xml
@@ -4,13 +4,14 @@
     <parent>
         <groupId>net.java.dev.sommer</groupId>
         <artifactId>foafssl</artifactId>
-        <version>0.5</version>
+		<version>${foafssl.version}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>foafssl-verifier</artifactId>
     <packaging>bundle</packaging>
     <name>FOAF+SSL :: Verifier</name>
     <url>http://sommer.dev.java.net/</url>
+	<version>${foafssl.version}</version>
 
     <licenses>
         <license>
