--- a/foafssl-identity-provider/pom.xml
+++ b/foafssl-identity-provider/pom.xml
@@ -4,14 +4,14 @@
 	<parent>
 		<groupId>net.java.dev.sommer</groupId>
 		<artifactId>foafssl</artifactId>
-		<version>0.5</version>
+		<version>0.5-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>foafssl-identity-provider</artifactId>
 	<packaging>jar</packaging>
 	<name>FOAF+SSL :: Identity Provider Core Library</name>
 	<url>http://sommer.dev.java.net/</url>
-	<version>${foafssl.version}</version>
+	<version>0.5-SNAPSHOT</version>
 
 	<licenses>
 		<license>
@@ -24,13 +24,11 @@
 		<dependency>
 			<groupId>org.apache.clerezza</groupId>
 			<artifactId>ssl.keygen.base</artifactId>
-			<version>${foafssl.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>net.java.dev.sommer</groupId>
 			<artifactId>foafssl-verifier</artifactId>
-			<version>${foafssl.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>net.java.dev.sommer</groupId>
