--- a/foafssl-verifier-sesame/pom.xml
+++ b/foafssl-verifier-sesame/pom.xml
@@ -4,14 +4,14 @@
 	<parent>
 		<groupId>net.java.dev.sommer</groupId>
 		<artifactId>foafssl</artifactId>
-		<version>${foafssl.version}</version>
+		<version>0.5-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>foafssl-verifier-sesame</artifactId>
 	<packaging>bundle</packaging>
 	<name>FOAF+SSL :: Verifier - Sesame implementation</name>
 	<url>http://sommer.dev.java.net/</url>
-	<version>${foafssl.version}</version>
+	<version>0.5-SNAPSHOT</version>
 
 	<licenses>
 		<license>
@@ -40,7 +40,6 @@
 		<dependency>
 			<groupId>org.apache.clerezza</groupId>
 			<artifactId>ssl.keygen.base</artifactId>
-			<version>0.5</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
