--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,11 @@
     <groupId>net.java.dev.sommer</groupId>
     <artifactId>foafssl</artifactId>
     <packaging>pom</packaging>
-	<version>${foafssl.version}</version>
+	<version>0.5-SNAPSHOT</version>
     <name>FOAF+SSL</name>
     <url>http://sommer.dev.java.net/</url>
 
     <properties>
-        <foafssl.version>0.5-SNAPSHOT</foafssl.version>
         <sesame.version>2.3.1</sesame.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -89,32 +88,32 @@
             <dependency>
                 <groupId>org.apache.clerezza</groupId>
                 <artifactId>ssl.keygen.base</artifactId>
-                <version>${foafssl.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.java.dev.sommer</groupId>
                 <artifactId>foafssl-verifier</artifactId>
-                <version>${foafssl.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.java.dev.sommer</groupId>
                 <artifactId>foafssl-verifier-sesame</artifactId>
-                <version>${foafssl.version}</version>
+				<version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.java.dev.sommer</groupId>
                 <artifactId>foafssl-identity-provider</artifactId>
-                <version>${foafssl.version}</version>
+				<version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.java.dev.sommer</groupId>
                 <artifactId>foafssl-identity-provider-webapp</artifactId>
-                <version>${foafssl.version}</version>
+				<version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.java.dev.sommer</groupId>
                 <artifactId>foafssl-filter</artifactId>
-                <version>${foafssl.version}</version>
+				<version>${project.version}</version>
             </dependency>
 
             <dependency>
