--- a/foafssl-identity-provider/pom.xml
+++ b/foafssl-identity-provider/pom.xml
@@ -22,8 +22,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.clerezza</groupId>
-			<artifactId>ssl.keygen.base</artifactId>
+			<groupId>net.java.dev.sommer</groupId>
+			<artifactId>keygen</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
