--- a/pom.xml
+++ b/pom.xml
@@ -81,13 +81,14 @@
         <module>foafssl-identity-provider</module>
         <module>foafssl-identity-provider-webapp</module>
         <module>foafssl-filter</module>
+        <module>keygen</module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.apache.clerezza</groupId>
-                <artifactId>ssl.keygen.base</artifactId>
+                <groupId>net.java.dev.sommer</groupId>
+                <artifactId>keygen</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
